--- a/projeto/views/admin/products/index.phtml
+++ b/projeto/views/admin/products/index.phtml
@@ -33,7 +33,7 @@
 				<tr>
 					<td>
 						<?php if(isset($p['image']) && $p['image']): ?>
-							<img src="<?=HOME .'assets/uploads/products/' . $p['image'];?>" alt="" width="100px">
+							<img src="<?=HOME .'assets/uploads/thumbs/' . $p['image'];?>" alt="" width="100px">
 						<?php else: ?>
 							<img src="http://placehold.it/100X100" alt="">
 						<?php endif; ?>
