--- a/projeto/views/auth/password.phtml
+++ b/projeto/views/auth/password.phtml
@@ -33,28 +33,28 @@
 
 <div class="container content">
 
-        <div class="row">
-          <?php require VIEWS . '/includes/message.phtml'; ?>
-        </div>
-        
-       <div class="col-md-4 col-md-offset-4">
-           <form action="<?=HOME;?>/auth/atualizar-senha/<?=$token;?>" method="post">
-               <div class="form-group">
-                   <label for="exampleInputEmail1">Nova Senha</label>
-                   <input type="password" class="form-control" name="password" placeholder="Digite sua nova senha">
-               </div>
-               <div class="form-group">
-                   <label for="exampleInputEmail1">Confirmar Nova Senha</label>
-                   <input type="password" class="form-control" name="confirm_password" placeholder="Confirmar senha">
-               </div>
-               <div class="row">
-                  <div class="col-md-12">
-                      <a href="<?=HOME;?>/auth/login">Voltar ao login</a>
-                  </div>
-               </div>
-               <button type="submit" class="btn btn-default btn-success pull-right">Atualizar</button>
-           </form>
-       </div>
+    <div class="row">
+        <?php require VIEWS_FOLDER . '/includes/message.phtml'; ?>
     </div>
+
+    <div class="col-md-4 col-md-offset-4">
+        <form action="<?=HOME;?>auth/proccessupdate/<?=$this->token;?>" method="post">
+            <div class="form-group">
+                <label for="exampleInputEmail1">Nova Senha</label>
+                <input type="password" class="form-control" name="password" placeholder="Digite sua nova senha">
+            </div>
+            <div class="form-group">
+                <label for="exampleInputEmail1">Confirmar Nova Senha</label>
+                <input type="password" class="form-control" name="confirm_password" placeholder="Confirmar senha">
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <a href="<?=HOME;?>auth/login">Voltar ao login</a>
+                </div>
+            </div>
+            <button type="submit" class="btn btn-default btn-success pull-right">Atualizar</button>
+        </form>
+    </div>
+</div>
 </body>
 </html>
