--- a/projeto/views/auth/login.phtml
+++ b/projeto/views/auth/login.phtml
@@ -33,28 +33,28 @@
 
 <div class="container content">
 
-        <div class="row">
-          <?php require VIEWS . '/includes/message.phtml'; ?>
-        </div>
-        
-       <div class="col-md-4 col-md-offset-4">
-           <form action="<?=HOME;?>/auth/login" method="post">
-               <div class="form-group">
-                   <label for="exampleInputEmail1">Email</label>
-                   <input type="email" class="form-control" placeholder="Email" name="email">
-               </div>
-               <div class="form-group">
-                   <label for="exampleInputPassword1">Password</label>
-                   <input type="password" class="form-control" placeholder="Senha" name="password">
-               </div>
-               <div class="row">
-                  <div class="col-md-12">
-                      <a href="<?=HOME;?>/auth/relembrar-senha">Esqueceu sua senha?</a>
-                  </div>
-               </div>
-               <button type="submit" class="btn btn-default btn-success pull-right">Acessar</button>
-           </form>
-       </div>
+    <div class="row">
+        <?php require VIEWS_FOLDER . '/includes/message.phtml'; ?>
     </div>
+
+    <div class="col-md-4 col-md-offset-4">
+        <form action="<?=HOME;?>auth/login" method="post">
+            <div class="form-group">
+                <label for="exampleInputEmail1">Email</label>
+                <input type="email" class="form-control" placeholder="Email" name="email">
+            </div>
+            <div class="form-group">
+                <label for="exampleInputPassword1">Password</label>
+                <input type="password" class="form-control" placeholder="Senha" name="password">
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <a href="<?=HOME;?>auth/rememberpassword">Esqueceu sua senha?</a>
+                </div>
+            </div>
+            <button type="submit" class="btn btn-default btn-success pull-right">Acessar</button>
+        </form>
+    </div>
+</div>
 </body>
 </html>
