--- a/projeto-3/views/includes/header.phtml
+++ b/projeto-3/views/includes/header.phtml
@@ -5,7 +5,7 @@
 	<meta name="viewport"
 	      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Projeto 1 - Site Institucional</title>
+	<title>Projeto 3 - Gerenciador Pessoal de Gastos</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
 <body>
@@ -18,7 +18,7 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="#">Code Experts Learning - Catálogo</a>
+			<a class="navbar-brand" href="#">Code Experts Learning - GPG</a>
 		</div>
 		<div id="navbar" class="navbar-collapse collapse">
 			<ul class="nav navbar-nav">
