--- a/projeto-3/views/includes/header.phtml
+++ b/projeto-3/views/includes/header.phtml
@@ -25,6 +25,9 @@
 				<li class="active">
 					<a href="<?=HOME;?>/">Home</a>
 				</li>
+                <li>
+                    <a href="<?=HOME;?>/myexpenses">Minhas Despesas</a>
+                </li>
 			</ul>
 		</div><!--/.nav-collapse -->
 	</div><!--/.container-fluid -->
